// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FocusRing should render 1`] = `
Object {
  "Component": Object {
    "Ring": Object {
      "active": false,
      "alpha": 1,
      "attached": true,
      "boundsMargin": null,
      "clipping": false,
      "color": 4294967295,
      "enabled": true,
      "flex": false,
      "flexItem": false,
      "h": 0,
      "isComponent": undefined,
      "mount": 0.5,
      "mountX": 0.5,
      "mountY": 0.5,
      "pivot": 0.5,
      "pivotX": 0.5,
      "pivotY": 0.5,
      "ref": "Ring",
      "renderOfScreen": undefined,
      "renderToTexture": false,
      "scale": 1,
      "scaleX": 1,
      "scaleY": 1,
      "state": undefined,
      "tag": [Function],
      "tags": Array [
        "Ring",
      ],
      "texture": Object {
        "type": "StaticCanvasTexture",
      },
      "visible": true,
      "w": 0,
      "x": 160,
      "y": 90,
      "zIndex": 0,
    },
  },
}
`;

exports[`FocusRing should take focus animation override 1`] = `
Object {
  "Component": Object {
    "active": false,
    "alpha": 1,
    "attached": true,
    "boundsMargin": null,
    "clipping": false,
    "color": "14f5f5f5",
    "enabled": true,
    "flex": false,
    "flexItem": false,
    "h": 180,
    "hasFinalFocus": true,
    "hasFocus": true,
    "isComponent": true,
    "mount": 0,
    "mountX": 0,
    "mountY": 0,
    "pivot": 0.5,
    "pivotX": 0.5,
    "pivotY": 0.5,
    "ref": "Component",
    "renderOfScreen": undefined,
    "renderToTexture": false,
    "scale": 1,
    "scaleX": 1,
    "scaleY": 1,
    "state": "",
    "tag": [Function],
    "tags": Array [
      "Component",
    ],
    "type": "FocusRing",
    "visible": true,
    "w": 320,
    "x": 0,
    "y": 0,
    "zIndex": 0,
  },
}
`;
